Created a new PINDER-eubacteria data set and tested its difficulty using the predictor based on taxonomy level matches.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -24,10 +24,12 @@
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord\n",
     "\n",
+    "TAX_LEVEL=\"species\"\n",
+    "\n",
     "PINDER_BASE_DIR=\"/scicore/home/schwede/durair0000/.local/share/\"\n",
     "UNIPROT_IDS_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_ids_1024_512.lst\"\n",
     "UNIPROT_LINEAGES_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_lineages_annotations_1024_512.tsv\"\n",
-    "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512/\"\n",
+    "SPLITS_DIR=f\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_{TAX_LEVEL}/\"\n",
     "SEED=1024\n",
     "\n",
     "random.seed(SEED)\n",
@@ -139,7 +141,7 @@
     "\n",
     "    return paired\n",
     "\n",
-    "def make_negative_pairs(df, interacting_partners, GO, seed=SEED, max_num_attempts=100):    \n",
+    "def make_negative_pairs(df, interacting_partners, GO, seed=SEED, max_num_attempts=100, tax_level=\"phylum\"):    \n",
     "    # Separate ids\n",
     "    df[['R', 'L']] = df['pinder_id'].str.split('--', expand=True)\n",
     "    df[['pdb_R', 'chain_uniprot_R']] = df['R'].str.split('__', expand=True)\n",
@@ -147,12 +149,12 @@
     "    df[['pdb_L', 'chain_uniprot_L']] = df['L'].str.split('__', expand=True)\n",
     "    df[['chain_L', 'uniprot_L']] = df['chain_uniprot_L'].str.split('_', expand=True)\n",
     "    \n",
-    "    # Group by phylum\n",
+    "    # Group by tax_level\n",
     "    negative_ids = []\n",
     "    negative_phyla = []\n",
     "    orig_pinder_ids = set(df['pinder_id'])\n",
     "    \n",
-    "    for phylum, group in df.groupby('phylum_R'):\n",
+    "    for tax_level_el, group in df.groupby(f'{tax_level}_R'):\n",
     "        \n",
     "        R = group['R'].tolist()\n",
     "        L = group['L'].tolist()\n",
@@ -173,24 +175,24 @@
     "        )\n",
     "\n",
     "        negative_ids.extend(paired)\n",
-    "        negative_phyla.extend([phylum]*len(paired))\n",
+    "        negative_phyla.extend([tax_level_el]*len(paired))\n",
     "\n",
     "    negative_records = list(zip(negative_ids, negative_phyla, negative_phyla))\n",
     "    negative_df = pd.DataFrame(\n",
     "        negative_records, \n",
-    "        columns=['pinder_id', 'phylum_R', 'phylum_L']\n",
+    "        columns=['pinder_id', f'{tax_level}_R', f'{tax_level}_L']\n",
     "    ).sample(frac=1, random_state=seed).reset_index(drop=True)\n",
     "    \n",
     "    negative_df[['pinder_id_R', 'pinder_id_L']] = negative_df['pinder_id'].str.split('--', expand=True)\n",
     "    \n",
     "    return negative_df\n",
     "\n",
-    "def rename_columns(df, to_drop=None):\n",
+    "def rename_columns(df, to_drop=None, tax_level=\"phylum\"):\n",
     "    df.rename(columns={\n",
     "        \"pinder_id_R\": \"protein1\",\n",
     "        \"pinder_id_L\": \"protein2\",\n",
-    "        \"phylum_R\": \"phylum1\",\n",
-    "        \"phylum_L\": \"phylum2\"\n",
+    "        f\"{tax_level}_R\": f\"{tax_level}1\",\n",
+    "        f\"{tax_level}_L\": f\"{tax_level}2\"\n",
     "    }, inplace=True)\n",
     "    if(to_drop): df.drop([to_drop], axis=1, inplace=True)\n",
     "    return df\n",
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -229,7 +231,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "b0b7f998-e9ce-4018-9eed-9e1ebd5bd706",
    "metadata": {},
    "outputs": [],
@@ -348,12 +350,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Determine, which UniProt IDs are belonging to eubacteria with labelled phylum\n",
+    "# Determine, which UniProt IDs are belonging to eubacteria with labelled tax_level\n",
     "lineages = pd.read_csv(UNIPROT_LINEAGES_PATH, sep='\\t')\n",
     "\n",
     "eubacteria_phyla = {}\n",
@@ -362,10 +364,10 @@
     "\n",
     "for index, row in lineages.iterrows():\n",
     "    if isinstance(row['Taxonomic lineage (Ids)'], str) and \"2 (superkingdom)\" in row['Taxonomic lineage (Ids)']: \n",
-    "        match = re.search(r'(\\d+) \\(phylum\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        match = re.search(r'(\\d+) \\(%s\\)' % TAX_LEVEL, row['Taxonomic lineage (Ids)'])\n",
     "        if match:\n",
-    "            phylum_tax_id = match.group(1)\n",
-    "            eubacteria_phyla[row['From']] = phylum_tax_id\n",
+    "            tax_level_tax_id = match.group(1)\n",
+    "            eubacteria_phyla[row['From']] = tax_level_tax_id\n",
     "            \n",
     "            # Retrieving UniProt IDs of the known interacting partners\n",
     "            if(not pd.isna(row['Interacts with'])):\n",
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -410,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "86221 906 885\n"
+      "62180 680 645\n"
      ]
     }
    ],
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -444,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8283 906 885\n"
+      "6668 680 645\n"
      ]
     }
    ],
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
    "outputs": [
@@ -467,12 +469,12 @@
      "output_type": "stream",
      "text": [
       "Split\tClass\tNumber of instances\n",
-      "train\t0\t7533\n",
-      "train\t1\t7533\n",
-      "val\t0\t792\n",
-      "val\t1\t792\n",
-      "test\t0\t790\n",
-      "test\t1\t790\n"
+      "train\t0\t4617\n",
+      "train\t1\t4617\n",
+      "val\t0\t344\n",
+      "val\t1\t344\n",
+      "test\t0\t332\n",
+      "test\t1\t332\n"
      ]
     }
    ],
@@ -488,16 +490,16 @@
     "            \"pinder_id\": id,\n",
     "            \"pinder_id_R\": id.split(\"--\")[0], \n",
     "            \"pinder_id_L\": id.split(\"--\")[1], \n",
-    "            \"phylum_R\": eubacteria_pinder_phyla[id][0], \n",
-    "            \"phylum_L\": eubacteria_pinder_phyla[id][1]}\n",
+    "            f\"{TAX_LEVEL}_R\": eubacteria_pinder_phyla[id][0], \n",
+    "            f\"{TAX_LEVEL}_L\": eubacteria_pinder_phyla[id][1]}\n",
     "        split_positives.append(record)\n",
-    "\n",
+    "    \n",
     "    split_positives = pd.DataFrame.from_dict(split_positives)\n",
-    "    split_negatives = make_negative_pairs(split_positives, eubacteria_annotated_interactions, eubacteria_GO)\n",
-    "    split_positives = split_positives[[\"pinder_id_R\", \"pinder_id_L\", \"phylum_R\", \"phylum_L\"]]\n",
+    "    split_negatives = make_negative_pairs(split_positives, eubacteria_annotated_interactions, eubacteria_GO, tax_level=TAX_LEVEL)\n",
+    "    split_positives = split_positives[[\"pinder_id_R\", \"pinder_id_L\", f\"{TAX_LEVEL}_R\", f\"{TAX_LEVEL}_L\"]]\n",
     "\n",
-    "    split_positives = rename_columns(split_positives)\n",
-    "    split_negatives = rename_columns(split_negatives, to_drop=\"pinder_id\")\n",
+    "    split_positives = rename_columns(split_positives, tax_level=TAX_LEVEL)\n",
+    "    split_negatives = rename_columns(split_negatives, to_drop=\"pinder_id\", tax_level=TAX_LEVEL)\n",
     "    \n",
     "    # Balancing the set\n",
     "    split_positives = split_positives.sample(n=len(split_negatives), random_state=SEED)\n",
@@ -505,7 +507,7 @@
     "    # Labelling the set\n",
     "    split_negatives['label'] = [0]*len(split_negatives)\n",
     "    split_positives['label'] = [1]*len(split_positives)\n",
-    "\n",
+    "    \n",
     "    # Summary of the split\n",
     "    print(f\"{split}\\t0\\t{len(split_negatives)}\\n{split}\\t1\\t{len(split_positives)}\")\n",
     "\n",
@@ -522,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "id": "4ecb63c4-1e90-4162-afd4-b8d6a2f1882b",
    "metadata": {},
    "outputs": [],
@@ -532,13 +534,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 69,
    "id": "e9984fba-c401-435b-a835-36a64fa2e921",
    "metadata": {},
    "outputs": [],
    "source": [
     "!cat $SPLITS_DIR/train.fasta $SPLITS_DIR/val.fasta $SPLITS_DIR/test.fasta > $SPLITS_DIR/sequences.fasta"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcc4630-47e4-43dd-8fff-fc3ad64f38c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
