--- a/data_process/pinder_lineage_taxids.ipynb
+++ b/data_process/pinder_lineage_taxids.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -11,43 +11,19 @@
     "import pandas as pd\n",
     "import csv\n",
     "import os\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import matthews_corrcoef\n",
     "\n",
     "UNIPROT_LINEAGES_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_lineages_annotations_1024_512.tsv\"\n",
     "FALSE_PRED_PREFIX=\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/predictions/PINDER-eubacteria/mean_pooled/catseq_\"\n",
-    "SEED=1024"
+    "SEED=1024\n",
+    "\n",
+    "TAX_LEVELS = [\"class\", \"order\", \"family\", \"genus\", \"species\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Determine, which UniProt IDs are belonging to eubacteria with labelled phylum\n",
-    "lineages = pd.read_csv(UNIPROT_LINEAGES_PATH, sep='\\t')\n",
-    "\n",
-    "tax_id_info = {}\n",
-    "\n",
-    "for index, row in lineages.iterrows():\n",
-    "    if isinstance(row['Taxonomic lineage (Ids)'], str) and \"2 (superkingdom)\" in row['Taxonomic lineage (Ids)']: \n",
-    "        class_ = re.search(r'(\\d+) \\(class\\)', row['Taxonomic lineage (Ids)'])\n",
-    "        order = re.search(r'(\\d+) \\(order\\)', row['Taxonomic lineage (Ids)'])\n",
-    "        family = re.search(r'(\\d+) \\(family\\)', row['Taxonomic lineage (Ids)'])\n",
-    "        genus = re.search(r'(\\d+) \\(genus\\)', row['Taxonomic lineage (Ids)'])\n",
-    "        species = re.search(r'(\\d+) \\(species\\)', row['Taxonomic lineage (Ids)'])\n",
-    "        class_ = class_.group(1) if(class_) else None\n",
-    "        order = order.group(1) if(order) else None\n",
-    "        family = family.group(1) if(family) else None\n",
-    "        genus = genus.group(1) if(genus) else None\n",
-    "        species = species.group(1) if(species) else None\n",
-    "        tax_id_info_dict = {\"class\": class_, \"order\": order, \"family\": family, \"genus\": genus, \"species\": species}\n",
-    "        tax_id_info[row['From']] = tax_id_info_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -73,27 +49,89 @@
     "    elif(record[\"True label\"] == 0 and record[\"Predicted label\"] == 0):\n",
     "        return \"TN\"\n",
     "\n",
-    "tax_matches_arr = []\n",
-    "tax_levels = [\"class\", \"order\", \"family\", \"genus\", \"species\"]\n",
+    "def get_tax_df_from_predictions(file_prefix):\n",
+    "    tax_matches_arr = []\n",
+    "    for biolm in [\"gLM2\", \"ESM2\", \"MINT\"]:\n",
+    "        tax_matches = {\"complex_id\": [], \"class\": [], \"order\": [], \"family\": [], \"genus\": [], \"species\": [], \"prediction_type\": [], \"truth\": []}\n",
+    "        predictions = pd.read_csv(f\"{file_prefix}{biolm}.tsv\", sep='\\t')\n",
+    "        for i, row in predictions.iterrows():\n",
+    "            tax_matches[\"complex_id\"].append(predictions[\"Complex ID\"][i])\n",
+    "            tax_matches[\"truth\"].append(predictions[\"True label\"][i])\n",
+    "            tax_matches[\"prediction_type\"].append(get_prediction_type(row))\n",
+    "            uniprot_r = predictions[\"Complex ID\"][i].split(\"_\")[3]\n",
+    "            uniprot_l = predictions[\"Complex ID\"][i].split(\"_\")[7]\n",
+    "            for level in TAX_LEVELS:\n",
+    "                tax_matches[level].append(check_tax_match(tax_id_info, [uniprot_r, uniprot_l], level))\n",
+    "        tax_matches_arr.append(tax_matches)\n",
     "\n",
-    "for biolm in [\"gLM2\", \"ESM2\", \"MINT\"]:\n",
-    "    tax_matches = {\"complex_id\": [], \"class\": [], \"order\": [], \"family\": [], \"genus\": [], \"species\": [], \"prediction_type\": [], \"truth\": []}\n",
-    "    predictions = pd.read_csv(f\"{FALSE_PRED_PREFIX}{biolm}.tsv\", sep='\\t')\n",
-    "    for i, row in predictions.iterrows():\n",
-    "        tax_matches[\"complex_id\"].append(predictions[\"Complex ID\"][i])\n",
-    "        tax_matches[\"truth\"].append(predictions[\"True label\"][i])\n",
-    "        tax_matches[\"prediction_type\"].append(get_prediction_type(row))\n",
-    "        uniprot_r = predictions[\"Complex ID\"][i].split(\"_\")[3]\n",
-    "        uniprot_l = predictions[\"Complex ID\"][i].split(\"_\")[7]\n",
-    "        for level in tax_levels:\n",
+    "    tax_dfs = []\n",
+    "    \n",
+    "    for i in range(len(tax_matches_arr)):\n",
+    "        tax_dfs.append(pd.DataFrame.from_dict(tax_matches_arr[i]))\n",
+    "        \n",
+    "    return tax_dfs, tax_matches_arr\n",
+    "\n",
+    "def get_tax_df_from_dataset(file_prefix, split=\"test\"):\n",
+    "    tax_matches = {\"complex_id\": [], \"class\": [], \"order\": [], \"family\": [], \"genus\": [], \"species\": [], \"truth\": []}\n",
+    "    data = pd.read_csv(f\"{file_prefix}/{split}.txt\", sep='\\t')\n",
+    "    for i, row in data.iterrows():\n",
+    "        tax_matches[\"complex_id\"].append(f\"{data['protein1'][i]}_{data['protein2'][i]}\")\n",
+    "        tax_matches[\"truth\"].append(data[\"label\"][i])\n",
+    "        uniprot_r = data[\"protein1\"][i].split(\"_\")[-1]\n",
+    "        uniprot_l = data[\"protein2\"][i].split(\"_\")[-1]\n",
+    "        for level in TAX_LEVELS:\n",
     "            tax_matches[level].append(check_tax_match(tax_id_info, [uniprot_r, uniprot_l], level))\n",
-    "    tax_matches_arr.append(tax_matches)\n",
-    "        "
+    "    tax_df = pd.DataFrame.from_dict(tax_matches)\n",
+    "    return tax_df\n",
+    "\n",
+    "# Make predictor based on taxonomy level match\n",
+    "\n",
+    "def get_predictions_based_on_tax_level(tax_df):\n",
+    "    for level in TAX_LEVELS:\n",
+    "        tax_df_cp = tax_df.copy()\n",
+    "        tax_df_cp = tax_df_cp.dropna(subset=[level])\n",
+    "        print(f\"{level} MCC: {matthews_corrcoef(tax_df_cp['truth'], tax_df_cp[level])}\")\n",
+    "        print(f\"# predictions: {len(tax_df_cp['truth'])}\")\n",
+    "        print(f\"\\tpred 0\\tpred 1\")\n",
+    "        tn, fp, fn, tp = confusion_matrix(tax_df_cp[\"truth\"], tax_df_cp[level]).ravel()\n",
+    "        print(f\"true 0\\t{tn}\\t{fp}\")\n",
+    "        print(f\"true 1\\t{fn}\\t{tp}\")\n",
+    "        print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
+   "id": "2d60ac14-2cc1-4824-9a8a-e5fbd0aa4781",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine, which UniProt IDs are belonging to eubacteria with labelled phylum\n",
+    "lineages = pd.read_csv(UNIPROT_LINEAGES_PATH, sep='\\t')\n",
+    "\n",
+    "tax_id_info = {}\n",
+    "\n",
+    "for index, row in lineages.iterrows():\n",
+    "    if isinstance(row['Taxonomic lineage (Ids)'], str) and \"2 (superkingdom)\" in row['Taxonomic lineage (Ids)']: \n",
+    "        class_ = re.search(r'(\\d+) \\(class\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        order = re.search(r'(\\d+) \\(order\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        family = re.search(r'(\\d+) \\(family\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        genus = re.search(r'(\\d+) \\(genus\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        species = re.search(r'(\\d+) \\(species\\)', row['Taxonomic lineage (Ids)'])\n",
+    "        class_ = class_.group(1) if(class_) else None\n",
+    "        order = order.group(1) if(order) else None\n",
+    "        family = family.group(1) if(family) else None\n",
+    "        genus = genus.group(1) if(genus) else None\n",
+    "        species = species.group(1) if(species) else None\n",
+    "        tax_id_info_dict = {\"class\": class_, \"order\": order, \"family\": family, \"genus\": genus, \"species\": species}\n",
+    "        tax_id_info[row['From']] = tax_id_info_dict\n",
+    "\n",
+    "tax_dfs, tax_matches_arr = get_tax_df_from_predictions(FALSE_PRED_PREFIX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "60db2aa2-64a1-4def-8475-dd9320b53a2e",
    "metadata": {},
    "outputs": [],
@@ -103,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "c2178c4b-2b35-4ea5-a584-bc67ea42c64c",
    "metadata": {},
    "outputs": [
@@ -295,7 +333,7 @@
        "[1580 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,36 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e2f77aeb-5229-4478-8430-559130283718",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gLM2\n",
-      "   group  class  order  family  genus  species\n",
-      "0  TP_TN   True   True    True   True     True\n",
-      "1  TP_FN   True   True    True   True     True\n",
-      "2  TN_FP  False  False   False  False    False\n",
-      "3  TP_FP   True   True    True   True     True\n",
-      "ESM2\n",
-      "   group  class  order  family  genus  species\n",
-      "0  TP_TN   True   True    True   True     True\n",
-      "1  TP_FN   True   True    True   True     True\n",
-      "2  TN_FP  False  False   False  False    False\n",
-      "3  TP_FP   True   True    True   True     True\n",
-      "MINT\n",
-      "   group  class  order family  genus species\n",
-      "0  TP_TN   True   True   True   True    True\n",
-      "1  TP_FN   True   True   True   True    True\n",
-      "2  TN_FP  False  False  False  False   False\n",
-      "3  TP_FP   True    NaN    NaN    NaN     NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Use statistical test to evaluate the significance of separation of taxonomy levels\n",
+    "\n",
     "from scipy.stats import f_oneway\n",
     "import numpy as np\n",
     "\n",
@@ -344,7 +359,7 @@
     "    tax_df = pd.DataFrame.from_dict(tax_matches_arr[i])\n",
     "    for group in [[\"TP\", \"TN\"], [\"TP\", \"FN\"], [\"TN\", \"FP\"], [\"TP\", \"FP\"]]:\n",
     "        stats[\"group\"].append(f\"{group[0]}_{group[1]}\")\n",
-    "        for level in tax_levels:\n",
+    "        for level in TAX_LEVELS:\n",
     "            if(len(set(tax_df[tax_df[\"prediction_type\"] == group[0]][level].dropna())) == 1 and \n",
     "               len(set(tax_df[tax_df[\"prediction_type\"] == group[1]][level].dropna())) == 1):\n",
     "                stats[level].append(np.nan)\n",
@@ -366,7 +381,7 @@
    "source": [
     "for i, biolm in enumerate([\"gLM2\", \"ESM2\", \"MINT\"]):\n",
     "    tax_df = pd.DataFrame.from_dict(tax_matches_arr[i])\n",
-    "    for level in tax_levels:\n",
+    "    for level in TAX_LEVELS:\n",
     "        print(f\"{biolm}, {level}\")\n",
     "        print(f\"TN:\\t{len(tax_df[tax_df['prediction_type'] == 'TN'][level].dropna())}\")\n",
     "        print(f\"FN:\\t{len(tax_df[tax_df['prediction_type'] == 'FN'][level].dropna())}\")\n",
@@ -377,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "f957cda1-270c-4092-a3b0-2301e83e7a05",
    "metadata": {},
    "outputs": [
@@ -482,32 +497,115 @@
     }
    ],
    "source": [
-    "# Make a predictor based on the taxonomy level match\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import matthews_corrcoef\n",
+    "# Make a predictions based on the taxonomy level match\n",
     "\n",
     "for i, biolm in enumerate([\"gLM2\", \"ESM2\", \"MINT\"]):\n",
     "    print(biolm)\n",
     "    tax_df = pd.DataFrame.from_dict(tax_matches_arr[i])\n",
-    "    for level in tax_levels:\n",
-    "        tax_df_cp = tax_df.copy()\n",
-    "        tax_df_cp = tax_df_cp.dropna(subset=[level])\n",
-    "        print(f\"{level} MCC: {matthews_corrcoef(tax_df_cp['truth'], tax_df_cp[level])}\")\n",
-    "        print(f\"# predictions: {len(tax_df_cp['truth'])}\")\n",
-    "        print(f\"\\tpred 0\\tpred 1\")\n",
-    "        tn, fp, fn, tp = confusion_matrix(tax_df_cp[\"truth\"], tax_df_cp[level]).ravel()\n",
-    "        print(f\"true 0\\t{tn}\\t{fp}\")\n",
-    "        print(f\"true 1\\t{fn}\\t{tp}\")\n",
-    "        print()\n"
+    "    get_predictions_based_on_tax_level(tax_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "02a5d7da-cc62-4c6c-85ff-a63c007cb222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class MCC: 0.0\n",
+      "# predictions: 1010\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t1\t504\n",
+      "true 1\t1\t504\n",
+      "\n",
+      "order MCC: 0.0\n",
+      "# predictions: 1010\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t1\t504\n",
+      "true 1\t1\t504\n",
+      "\n",
+      "family MCC: 0.0\n",
+      "# predictions: 1010\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t1\t504\n",
+      "true 1\t1\t504\n",
+      "\n",
+      "genus MCC: 0.0\n",
+      "# predictions: 1010\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t1\t504\n",
+      "true 1\t1\t504\n",
+      "\n",
+      "species MCC: 0.29996140155235557\n",
+      "# predictions: 671\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t45\t253\n",
+      "true 1\t0\t373\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "DATASET_PREFIX=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_genus/\"\n",
+    "\n",
+    "tax_df = get_tax_df_from_dataset(DATASET_PREFIX, split=\"test\")\n",
+    "\n",
+    "get_predictions_based_on_tax_level(tax_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "6f959a38-67fe-4295-a66f-2e5118ca4a75",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class MCC: 0.0\n",
+      "# predictions: 664\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t0\t332\n",
+      "true 1\t0\t332\n",
+      "\n",
+      "order MCC: 0.0\n",
+      "# predictions: 664\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t0\t332\n",
+      "true 1\t0\t332\n",
+      "\n",
+      "family MCC: 0.0\n",
+      "# predictions: 664\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t0\t332\n",
+      "true 1\t0\t332\n",
+      "\n",
+      "genus MCC: -0.03883678186903087\n",
+      "# predictions: 664\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t0\t332\n",
+      "true 1\t1\t331\n",
+      "\n",
+      "species MCC: -0.03883678186903087\n",
+      "# predictions: 664\n",
+      "\tpred 0\tpred 1\n",
+      "true 0\t0\t332\n",
+      "true 1\t1\t331\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "DATASET_PREFIX=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/\"\n",
+    "\n",
+    "tax_df = get_tax_df_from_dataset(DATASET_PREFIX, split=\"test\")\n",
+    "\n",
+    "get_predictions_based_on_tax_level(tax_df)"
+   ]
   }
  ],
  "metadata": {
