Updated txt to csv conversion script in terms of header, added analysis of the difficulty of the species and genus sets. Added configs for the species set.

--- a/data_process/make_csv.ipynb
+++ b/data_process/make_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8351f1b8-01d9-4210-9427-6c6f6597bec8",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,9 @@
     "from Processor import Processor\n",
     "import pandas as pd\n",
     "\n",
-    "TXT_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/Bernett2022_1k/test.txt\"\n",
-    "FASTA_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/Bernett2022/human_swissprot_oneliner.fasta\"\n",
-    "CSV_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/Bernett2022_1k/test.csv\"\n",
+    "TXT_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/train.txt\"\n",
+    "FASTA_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/sequences.fasta\"\n",
+    "CSV_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/train.csv\"\n",
     "\n",
     "proc = Processor(FASTA_PATH, TXT_PATH, None)\n",
     "\n",
@@ -34,21 +34,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "32b9eb12-f727-41ff-a119-aac840a6071d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_data = {\"seq1\": [], \"seq2\": [], \"labels\": []}\n",
+    "csv_data = {\"seq1\": [], \"seq2\": [], \"label\": []}\n",
     "\n",
     "for i, pair in pairs.iterrows():\n",
     "    csv_data[\"seq1\"].append(fasta[pair[\"protein1\"]])\n",
     "    csv_data[\"seq2\"].append(fasta[pair[\"protein2\"]])\n",
-    "    csv_data[\"labels\"].append(pair[\"label\"])\n",
+    "    csv_data[\"label\"].append(pair[\"label\"])\n",
     "\n",
     "csv_df = pd.DataFrame.from_dict(csv_data)\n",
     "csv_df.to_csv(CSV_PATH, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "210bcfa5-bf47-4c91-91b9-c807f5b22a30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
