Added the correlation analysis of PINDER-eubacteria-species set's CJs and contact maps.

--- a/contact_map.ipynb
+++ b/contact_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "id": "ca699c3c-060a-4f9d-ba37-42b13f98b9e4",
    "metadata": {},
    "outputs": [],
@@ -26,9 +26,10 @@
     "import random\n",
     "import pandas as pd\n",
     "import torch\n",
+    "from sklearn.metrics import matthews_corrcoef, precision_score, recall_score, balanced_accuracy_score\n",
     "\n",
     "PINDER_BASE_DIR=\"/scicore/home/schwede/durair0000/.local/share/\"\n",
-    "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512/\"\n",
+    "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512_species/\"\n",
     "os.environ[\"PINDER_BASE_DIR\"] = PINDER_BASE_DIR\n",
     "get_pinder_location()\n",
     "\n",
@@ -86,7 +87,7 @@
     "    atom_data = []\n",
     "    \n",
     "    for i, id_ in enumerate(ids[\"R\"]):\n",
-    "        if(i > 10): return atom_data\n",
+    "        #if(i > 10): return atom_data\n",
     "        try:\n",
     "            struct_r = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{id_}-R.pdb\", pinder_id=id_)\n",
     "            struct_l = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{ids['L'][i]}-L.pdb\", pinder_id=ids['L'][i])\n",
@@ -110,28 +111,141 @@
     "        )\n",
     "\n",
     "        atom_data_el = {\n",
-    "            \"id\": f\"{id_}--{ids['L'][i]}\",\n",
+    "            \"id\": f\"{id_}-{ids['L'][i]}\",\n",
     "            \"pos_r\": pos_r,\n",
     "            \"pos_l\": pos_l,\n",
     "            \"sasa_r\": sasa_r,\n",
     "            \"sasa_l\": sasa_l,\n",
+    "            \"len_r\": len(struct_r.sequence),\n",
+    "            \"len_l\": len(struct_l.sequence)\n",
     "        }\n",
     "        \n",
     "        atom_data.append(atom_data_el)\n",
     "\n",
     "    return atom_data\n",
-    "        \n",
-    "            "
+    "\n",
+    "def get_contact_map(data_dict):\n",
+    "    contact_map = np.zeros((data_dict[\"len_r\"], data_dict[\"len_l\"]))\n",
+    "\n",
+    "    for i in range(len(data_dict[\"pos_r\"])):\n",
+    "        contact_map[data_dict[\"pos_r\"][i].item()][data_dict[\"pos_l\"][i].item()] = 1\n",
+    "\n",
+    "    return contact_map\n",
+    "\n",
+    "def get_cj_map(data_dict, cj_path):\n",
+    "    id_for_file = data_dict[\"id\"].translate(str.maketrans({'_': '-', '-': '_'}))\n",
+    "    cj = np.load(f\"{cj_path}/{id_for_file}_fastCJ.npy\")\n",
+    "    # Setting the threshold for the outlier count\n",
+    "    n = 3\n",
+    "    m = np.mean(cj)\n",
+    "    s = np.std(cj)\n",
+    "    threshold = m+n*s\n",
+    "\n",
+    "    # Retrieving upper-right quadrant and skipping the tokens <+>\n",
+    "    upper_right_quadrant_cj = cj[1:data_dict[\"len_r\"]+1, data_dict[\"len_r\"]+2:]\n",
+    "    upper_right_quadrant_cj = np.where(upper_right_quadrant_cj > threshold, 1, 0)\n",
+    "\n",
+    "    return upper_right_quadrant_cj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 80,
    "id": "bbf2ffe5-ec16-4511-a36d-eb8518451850",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = get_atom_data(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "05a523d6-2aa3-4e5a-a782-730aae2fa170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/scicore/home/schwede/pudziu0000/mambaforge/envs/glam/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading the categorical Jacobian\n",
+    "CJ_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/outputs/categorical_jacobians/glm2_cosine/\"\n",
+    "\n",
+    "mccs = []\n",
+    "precs = []\n",
+    "recs = []\n",
+    "bal_accs = []\n",
+    "for i in range(len(data)):\n",
+    "    contact_map = get_contact_map(data[i])\n",
+    "    cj_contact_map = get_cj_map(data[i], CJ_PATH)\n",
+    "    \n",
+    "    # Compute the correlation between the quadrants\n",
+    "    mcc = matthews_corrcoef(contact_map.flatten(), cj_contact_map.flatten())\n",
+    "    prec = precision_score(contact_map.flatten(), cj_contact_map.flatten())\n",
+    "    rec = recall_score(contact_map.flatten(), cj_contact_map.flatten())\n",
+    "    bal_acc = balanced_accuracy_score(contact_map.flatten(), cj_contact_map.flatten())\n",
+    "    mccs.append(mcc)\n",
+    "    precs.append(prec)\n",
+    "    recs.append(rec)\n",
+    "    bal_accs.append(bal_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "df55728c-0a9c-4644-aea3-66e316e678a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCC:  0.01678787636669346\n",
+      "Precision:  0.018184007851413386\n",
+      "Recall:  0.024420350163846048\n",
+      "Balanced accuracy:  0.5111404662081747\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MCC: \", np.average(mccs))\n",
+    "\n",
+    "# Ability not to label a negative sample as a positive\n",
+    "print(\"Precision: \", np.average(precs))\n",
+    "\n",
+    "# Ability to find all positive samples \n",
+    "print(\"Recall: \", np.average(recs))\n",
+    "\n",
+    "# Being right overall\n",
+    "print(\"Balanced accuracy: \", np.average(bal_accs))"
    ]
   }
  ],
